DEPRECATED/immich-vision-tagging/network-policy-ollama-allow-ingress-from-immich.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ollama-allow-ingress-from-immich
  namespace: ollama
spec:
  podSelector:
    matchLabels:
      app: ollama
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: immich
          podSelector:
            matchLabels:
              app.kubernetes.io/name: immich-vision-tagging
      ports:
        - protocol: TCP
          port: 11434
